## Map patches for open world :

# Main:

Stats enabled in Rhombus Dungeon entrance (for NG+ purposes).
Save fixes are entirely removed. Plot version starts in 5 to avoid save fix prompts in case they happen (which shouldn't).
SP Upgrades are now incremental instead of fixed (2SP in Faj'ro, 3SP in Krys'kajo, 4SP in beach)
Party window enabled in CrossCentral. You can now invite/manage party members as soon as certain events:

- Only Apollo 3 duel is active, which unlocks him and Joern as party members if you fight him
- Unlock Emilie on Rookie Harbor Intro
- Unlock C’tron on Maroon Tree quest
- Unlock Shizuka by fighting her in Old Hideout

# Rookie Harbor:

Intro with Emilie and Schneider now tied to its own plot sequence
Access to North Marketplace not tied to plot.line, but to getting Red Flame Shade (0.0.2)
Every quest tied to finishing Faj'ro temple is now tied to getting Red Flame Shade
Master Sensei quest requires both Flame and Ice Shades

# Autumn's Rise / Guild Area

Guild Town is open only after meeting Schneider for the first time, with him giving you the Guild Pass.

# Bergen:

No Apollo 1 sequence
Bergen Mine Entrance not locked by being past plotline (just needs Mine Pass)
Bergen Elevator passage to Maroon Valley not locked by plotline
Guild entry plot sequence now tied to its own plot.line. This is enabled after obtaining Mine Pass.
All second set of quests unlock after obtaining Blue Ice Shade

# Maroon Valley:

Ba’kii kum Eldress quest now tied to its own plotline
Can invite C’tron to party for Maroon Tree quest, or look for him next to West Entrance where he usually is (up until finishing the Maroon Tree quest)
No Apollo 2 sequence before Faj’ro
Forced Maroon Tree pass to enter Maroon Tree
Forced C’tron and Emilie when returning the Maroon Tree quest until you claim the Sand Shade reward

# Fajro Temple:

No logout or party member lock after Faj’ro temple
Disabled the cutscene when you enter the cross room in ground floor